// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoUploadSwitcher actions should handleToggle 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "autoUploadEnabled": true,
      },
      "type": "AUTO_UPLOAD_TOGGLE",
    },
  ],
]
`;

exports[`AutoUploadSwitcher actions should handleToggle with error 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Network error!",
          "sticky": true,
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;
